lang dropdown component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1 translate="primeng.passwordPrompt"></h1>
 
-<button (click)="translate('en')">translate</button>
+<app-lang-dropdown></app-lang-dropdown>
