flag-icons + primeflex

--- a/src/app/components/lang-dropdown/lang-dropdown.component.html
+++ b/src/app/components/lang-dropdown/lang-dropdown.component.html
@@ -1,1 +1,10 @@
-<p-dropdown [(ngModel)]="lang" [options]="langOptions" (onChange)="translate()"></p-dropdown>
+<p-dropdown [(ngModel)]="lang" [options]="langOptions" (onChange)="translate()">
+  <ng-template pTemplate="selectedItem">
+    <i [class]="'flag-icon flag-icon-' + lang"></i>
+  </ng-template>
+  <ng-template let-item pTemplate="item">
+    <div class="flex justify-content-center">
+      <i [class]="'flag-icon flag-icon-' + item"></i>
+    </div>
+  </ng-template>
+</p-dropdown>
