adding abstractions and services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<p-confirmDialog></p-confirmDialog>
+<p-toast></p-toast>
+
+
+
 <h1 translate="primeng.passwordPrompt"></h1>
 
 <app-lang-dropdown></app-lang-dropdown>
