--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <p-confirmDialog></p-confirmDialog>
 <p-toast></p-toast>
 
+<nav app-nav></nav>
+<main>
+  <h1 translate="primeng.passwordPrompt"></h1>
+  <app-lang-dropdown></app-lang-dropdown>
+</main>
 
-
-<h1 translate="primeng.passwordPrompt"></h1>
-
-<app-lang-dropdown></app-lang-dropdown>
