feat(components): making components standalone

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <p-confirmDialog></p-confirmDialog>
 <p-toast></p-toast>
 
-<nav app-nav></nav>
+<nav smdn-nav></nav>
 <main>
   <h1 translate="primeng.passwordPrompt"></h1>
   <app-lang-dropdown></app-lang-dropdown>
