--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,2 +1,3 @@
-<button #btn type="button" pButton icon="pi pi-bars" label="SMDN" (click)="menu.toggle($event)"></button>
-<p-slideMenu #menu [model]="menuItems" [popup]="true" [viewportHeight]="250" [style]="{'min-width':'175px'}" ></p-slideMenu>
+<button #btn type="button" pButton icon="pi pi-bars" (click)="menu.toggle($event)"></button>
+<p-slideMenu #menu [model]="menuItems" [popup]="true" [viewportHeight]="250" [style]="{'min-width':'175px'}" >
+</p-slideMenu>
