style(app): add typefaces and custom theme for the application

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 <nav smdn-nav></nav>
 <main>
-  <h1 translate="primeng.passwordPrompt"></h1>
+  <h1 translate="app_name" class="logo"></h1>
   <app-lang-dropdown></app-lang-dropdown>
 </main>
 
