--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,3 +1,4 @@
-<button #btn type="button" pButton icon="pi pi-bars" (click)="menu.toggle($event)"></button>
-<p-slideMenu #menu [model]="menuItems" [popup]="true" [viewportHeight]="250" [style]="{'min-width':'175px'}" >
+<p-button #btn type="button" icon="pi pi-bars" (click)="menu.toggle($event)"
+        styleClass="p-button-rounded"></p-button>
+<p-slideMenu #menu [model]="menuItems" [popup]="true" [viewportHeight]="250" [style]="{'min-width':'175px'}">
 </p-slideMenu>
