--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global themes to this file, and also import other style files */
+
+@font-face {
+  font-family: 'Bernier';
+  src: url('assets/fonts/BERNIERDistressed-Regular.eot'); /* IE9 Compat Modes */
+  src: url('assets/fonts/BERNIERDistressed-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('assets/fonts/BERNIERDistressed-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('assets/fonts/BERNIERDistressed-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+  url('assets/fonts/BERNIERDistressed-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+  url('assets/fonts/BERNIERDistressed-Regular.svg#BERNIERDistressed') format('svg'); /* Legacy iOS */
+}
+
+.logo {
+  font-family: 'Bernier', sans-serif;
+}
