--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-column">
-  <h1>Oops. C'è stato un errore.</h1>
+  <h1 translate="components.error.title"></h1>
   <p>{{ config.data.message }}</p>
-  <button pButton type="button" label="OK" class="p-button-raised" (click)="ref.destroy()"></button>
+  <button pButton type="button" [label]="'generic.confirm' | translate" class="p-button-raised" (click)="ref.destroy()"></button>
 </div>
 
