A bunch of new stuff from the old project.
I got it to compile, but a lot of it is still broken.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,5 @@
 <p-toast></p-toast>
 
 <nav smdn-nav></nav>
-<main>
-  <h1 translate="app_name" class="logo"></h1>
-  <app-lang-dropdown></app-lang-dropdown>
-</main>
+<router-outlet></router-outlet>
 
