--- a/src/app/pages/public/home/home.component.less
+++ b/src/app/pages/public/home/home.component.less
@@ -1,10 +1,24 @@
 @import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700");
 
+/* ANIMATIONS - start */
+
+// animation: fadeIn 0.5s ease;
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+/* ANIMATIONS - end */
+
+/* BROWSER DEFAULT RESET - start */
+
 * {
   border: 0;
   margin: 0;
   padding: 0;
 }
+
+/* BROWSER DEFAULT RESET - end */
 
 .hero {
   display: flex;
