--- a/src/app/pages/public/home/home.component.html
+++ b/src/app/pages/public/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="hero">
-  <div class="main-content">
+  <div class="main-content flex flex-column justify-content-center align-items-center">
     <p>Dal 2 al 4 agosto a Vezzano sul Crostolo</p>
+    <img class="main-title" src="assets/images/home_landing_title.svg" alt="é tempo di sagra">
   </div>
   <div class="scroll-icon">
     <i class="pi pi-chevron-down"></i>
