--- a/src/app/pages/public/home/home.component.less
+++ b/src/app/pages/public/home/home.component.less
@@ -4,8 +4,16 @@
 
 // animation: fadeIn 0.5s ease;
 @keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
 }
 
 /* ANIMATIONS - end */
@@ -46,16 +54,19 @@
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-image: url("/assets/images/home_landing_background.svg");
+    background: url("/assets/images/home_landing_background.svg") no-repeat center center fixed;
     background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     p {
-      color: #00000066;
-      font-size: 2rem;
-      padding-bottom: 16rem;
+      color: var(--text-color);
+      font-size: 18pt;
+    }
+
+    img {
+      &.main-title {
+        width: 65vw;
+        animation: fadeIn 1s ease;
+      }
     }
   }
 
