Landing is almost done.
Footer is missing + need to fix the big numbers

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,3 +1,6 @@
+@import "assets/fonts/bernier/stylesheet.css";
+@import "assets/fonts/carneys/stylesheet.css";
+
 body {
   margin: 0;
   padding: 0;
