--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,7 +1,9 @@
 ::ng-deep {
   nav[smdn-nav] {
     .p-slidemenu {
-      .p-slidemenu-content {
+      .p-slidemenu-wrapper {
+        width: 100% !important;
+
         ul {
           width: 100% !important;
         }
