--- a/src/app/pages/public/home/home.component.html
+++ b/src/app/pages/public/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="hero">
   <div class="main-content flex flex-column justify-content-center align-items-center">
     <p>Dal 2 al 4 agosto a Vezzano sul Crostolo</p>
-    <img class="main-title" src="assets/images/home_landing_title.svg" alt="é tempo di sagra">
+    <h1 class="bernier">è tempo di sagra</h1>
   </div>
   <div class="scroll-icon">
     <i class="pi pi-chevron-down"></i>
@@ -10,20 +10,20 @@
 <div class="hero events">
   <div class="column">
     <div class="info">
-      <div class="number">01</div>
-      <div class="section-title">Eventi</div>
+      <div class="number carneys">01</div>
+      <div class="section-title bernier">eventi</div>
       <div class="section-description">Scopri che eventi ti aspettano alla nostra sagra</div>
-      <a class="section-link" routerLink="/events">vai al programma</a>
+      <a class="section-link" routerLink="/events">programmazione</a>
     </div>
   </div>
 </div>
 <div class="hero food">
   <div class="column">
     <div class="info">
-      <div class="number">02</div>
-      <div class="section-title">Ristorazione</div>
-      <div class="section-description">La fame si fa sentire? Visita i nostri punti ristoro!</div>
-      <a class="section-link" routerLink="/orders">ordina subito</a>
+      <div class="number carneys">02</div>
+      <div class="section-title bernier">ristorazione</div>
+      <div class="section-description">La fame si fa sentire? Dai un occhiata ai nostri punti ristoro!</div>
+      <a class="section-link" routerLink="/orders">menù</a>
     </div>
   </div>
 </div>
