--- a/src/app/pages/public/home/home.component.less
+++ b/src/app/pages/public/home/home.component.less
@@ -2,7 +2,7 @@
 
 /* ANIMATIONS - start */
 
-// animation: fadeIn 0.5s ease;
+// animation: fadeIn 1s ease;
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -14,6 +14,32 @@
     transform: scale(1);
     -webkit-transform: scale(1);
   }
+}
+
+// animation: fadeIn 3s ease;
+@keyframes fadeInDelayed {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+  }
+  60% {
+    opacity: 0;
+    transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
+}
+
+// animation: bounce 2s ease infinite;
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+  40% {transform: translateY(-30px);}
+  60% {transform: translateY(-15px);}
 }
 
 /* ANIMATIONS - end */
@@ -59,13 +85,23 @@
 
     p {
       color: var(--text-color);
-      font-size: 18pt;
+      font-size: 22pt;
+      animation: fadeIn 1s ease;
     }
 
-    img {
-      &.main-title {
-        width: 65vw;
-        animation: fadeIn 1s ease;
+    h1 {
+      position: relative;
+      color: var(--text-color);
+      font-size: 100pt;
+      animation: fadeIn 3s ease;
+
+      &::before {
+        content: 'SMDN';
+        position: absolute;
+        color: var(--surface-300);
+        font-family: 'Carneys', cursive, sans-serif;
+        transform: translate(-14%, -35%);
+        z-index: -1;
       }
     }
   }
@@ -78,9 +114,13 @@
     display: flex;
     justify-content: center;
 
-    .i {
-      color: #00000066;
-      font-size: 2rem;
+    i {
+      background-color: var(--surface-d);
+      color: var(--text-color);
+      font-size: 16pt;
+      padding: .75rem;
+      border-radius: 50%;
+      animation: bounce 2s ease infinite;
     }
   }
 
@@ -90,36 +130,39 @@
     color: #ffffff;
 
     .info {
+      position: relative;
       width: 50%;
       margin: auto;
       padding-top: 40vh;
+      font-family: var(--font-family);
 
       .number {
-        color: #ffffff66;
-        font-family: Playfair Display, serif;
-        font-size: 5rem;
-        font-weight: 400;
+        position: absolute;
+        color: #ffffff22;
+        font-size: 400pt;
+        transform: translate(-22%, -50%);
       }
 
       .section-title {
         margin: 1rem 0;
-        font-size: 3rem;
-        font-weight: 700;
+        font-size: 60pt;
       }
 
       .section-description {
         color: #ffffff66;
         margin: 2.5rem 0 1.5rem 0;
+        font-size: 16pt;
       }
 
       .section-link {
-        padding: 0.5rem 0;
+        padding: .75rem 1rem;
         text-decoration: none;
-        color: #ffffff;
-        border-bottom: 1px solid #f9d63966;
+        background-color: var(--primary-color);
+        color: var(--primary-color-text);
+        border-radius: 50px;
 
         &:hover {
-          border-bottom-color: #f9d639;
+          background-color: var(--primary-700);
         }
       }
     }
