fixed big numbers in landing.
Only the footer is missing now.

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,5 +1,7 @@
 ::ng-deep {
   nav[smdn-nav] {
+    position: relative;
+    z-index: 1000;
     .p-slidemenu {
       .p-slidemenu-wrapper {
         width: 100% !important;
