--- a/src/app/pages/public/home/home.component.html
+++ b/src/app/pages/public/home/home.component.html
@@ -23,7 +23,7 @@
       <div class="number carneys">02</div>
       <div class="section-title bernier">ristorazione</div>
       <div class="section-description">La fame si fa sentire? Dai un occhiata ai nostri punti ristoro!</div>
-      <a class="section-link" routerLink="/orders">menù</a>
+      <a class="section-link" routerLink="/restaurants">menù</a>
     </div>
   </div>
 </div>
