feat(finished landing): Update font styles and improve layout for various screen sizes
Changed the font style from 'Carneys' cursive to serif. Updated the stylesheet references in angular.json. Simplified the scrollbar style and made it universal. Also made numerous layout adjustments in home component for better responsiveness on different screen sizes. Removed redundant number div and capitalised button text in home component HTML.

Signed-off-by: riccardocampani96 <riccardocampani96@gmail.com>

--- a/src/app/pages/public/home/home.component.html
+++ b/src/app/pages/public/home/home.component.html
@@ -10,20 +10,18 @@
 <div class="hero events">
   <div class="column">
     <div class="info">
-      <div class="number carneys">01</div>
       <div class="section-title bernier">eventi</div>
       <div class="section-description">Scopri che eventi ti aspettano alla nostra sagra</div>
-      <a class="section-link" routerLink="/events">programmazione</a>
+      <a class="section-link" routerLink="/events">PROGRAMMAZIONE</a>
     </div>
   </div>
 </div>
 <div class="hero food">
   <div class="column">
     <div class="info">
-      <div class="number carneys">02</div>
       <div class="section-title bernier">ristorazione</div>
       <div class="section-description">La fame si fa sentire? Dai un occhiata ai nostri punti ristoro!</div>
-      <a class="section-link" routerLink="/restaurants">menù</a>
+      <a class="section-link" routerLink="/restaurants">MENU</a>
     </div>
   </div>
 </div>
