--- a/src/app/pages/public/home/home.component.less
+++ b/src/app/pages/public/home/home.component.less
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700");
-
 /* ANIMATIONS - start */
 
 // animation: fadeIn 1s ease;
@@ -7,39 +5,24 @@
   0% {
     opacity: 0;
     transform: scale(0.5);
-    -webkit-transform: scale(0.5);
   }
   100% {
     opacity: 1;
     transform: scale(1);
-    -webkit-transform: scale(1);
-  }
-}
-
-// animation: fadeIn 3s ease;
-@keyframes fadeInDelayed {
-  0% {
-    opacity: 0;
-    transform: scale(0.5);
-    -webkit-transform: scale(0.5);
-  }
-  60% {
-    opacity: 0;
-    transform: scale(0.5);
-    -webkit-transform: scale(0.5);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-    -webkit-transform: scale(1);
   }
 }
 
 // animation: bounce 2s ease infinite;
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-  40% {transform: translateY(-30px);}
-  60% {transform: translateY(-15px);}
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
 }
 
 /* ANIMATIONS - end */
@@ -64,14 +47,12 @@
   }
 
   &.events {
-    background-image: url('../../../../assets/images/home_events.jpg');
-    background-attachment: fixed;
+    background: url('../../../../assets/images/home_events.jpg') no-repeat center center fixed;
     background-size: cover;
   }
 
   &.food {
-    background-image: url('../../../../assets/images/home_food.jpg');
-    background-attachment: fixed;
+    background: url('../../../../assets/images/home_food.jpg')  no-repeat center center fixed;
     background-size: cover;
   }
 
@@ -99,9 +80,9 @@
         content: 'SMDN';
         position: absolute;
         color: var(--surface-300);
-        font-family: 'Carneys', cursive, sans-serif;
+        font-family: 'Carneys', serif;
         font-size: 75pt;
-
+        translate: -5% -25%;
         z-index: -1;
       }
     }
@@ -136,27 +117,17 @@
       margin: auto;
       padding-top: 40vh;
       font-family: var(--font-family);
-
-      .number {
-        position: absolute;
-        color: #ffffff22;
-        font-size: 300pt;
-        transform: translate(-22%, -50%);
-      }
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
 
       .section-title {
-        margin: 1rem 0;
         font-size: 60pt;
-        position: relative;
-        z-index: 1;
       }
 
       .section-description {
         color: #ffffff66;
-        margin: 2.5rem 0 1.5rem 0;
         font-size: 16pt;
-        position: relative;
-        z-index: 1;
       }
 
       .section-link {
@@ -165,8 +136,7 @@
         background-color: var(--primary-color);
         color: var(--primary-color-text);
         border-radius: 50px;
-        position: relative;
-        z-index: 1;
+        width: fit-content;
 
         &:hover {
           background-color: var(--primary-700);
@@ -176,25 +146,60 @@
   }
 }
 
-/* MOBILE DEVICES */
+/* TABLETS */
 
-@media screen and (max-width:999px) {
+@media screen and (max-width: 1023px) {
   .hero {
     .main-content {
       p {
-        font-size: 1.5rem;
+        font-size: 18pt;
+      }
+
+      h1 {
+        font-size: 72pt;
+
+        &::before {
+          font-size: 56pt;
+        }
       }
     }
+
     .column {
       width: 100%;
+    }
+  }
+}
 
+/* SMARTPHONES */
+
+@media screen and (max-width: 425px) {
+  .hero {
+    .main-content {
+      p {
+        font-size: 14pt;
+      }
+
+      h1 {
+        font-size: 36pt;
+
+        &::before {
+          font-size: 28pt;
+        }
+      }
+    }
+
+    .column {
       .info {
-        .number {
-          font-size: 4rem;
+        .section-title {
+          font-size: 36pt;
         }
 
-        .section-title {
-          font-size: 2rem;
+        .section-description {
+          font-size: 14pt;
+        }
+
+        .section-link {
+          font-size: 10pt;
         }
       }
     }
