--- a/src/styles.less
+++ b/src/styles.less
@@ -5,6 +5,8 @@ body {
 
 
 * {
+  font-family: var(--font-family);
+
   /* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
   scrollbar-width: none;
 
