--- a/src/app/pages/public/home/home.component.html
+++ b/src/app/pages/public/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="hero">
   <div class="main-content flex flex-column justify-content-center align-items-center">
-    <p>Dal 2 al 4 agosto a Vezzano sul Crostolo</p>
-    <h1 class="bernier">è tempo di sagra</h1>
+    <p>{{ translatePrefix + 'subtitle' | translate }}</p>
+    <h1 class="bernier">{{ translatePrefix + 'title' | translate }}</h1>
   </div>
   <div class="scroll-icon">
     <i class="pi pi-chevron-down"></i>
@@ -10,18 +10,18 @@
 <div class="hero events">
   <div class="column">
     <div class="info">
-      <div class="section-title bernier">eventi</div>
-      <div class="section-description">Scopri che eventi ti aspettano alla nostra sagra</div>
-      <a class="section-link" routerLink="/events">PROGRAMMAZIONE</a>
+      <div class="section-title bernier">{{ translatePrefix + 'events.title' | translate }}</div>
+      <div class="section-description">{{ translatePrefix + 'events.subtitle' | translate }}</div>
+      <a class="section-link" routerLink="/events">{{ translatePrefix + 'events.cta' | translate }}</a>
     </div>
   </div>
 </div>
 <div class="hero food">
   <div class="column">
     <div class="info">
-      <div class="section-title bernier">ristorazione</div>
-      <div class="section-description">La fame si fa sentire? Dai un occhiata ai nostri punti ristoro!</div>
-      <a class="section-link" routerLink="/restaurants">MENU</a>
+      <div class="section-title bernier">{{ translatePrefix + 'food.title' | translate }}</div>
+      <div class="section-description">{{ translatePrefix + 'food.subtitle' | translate }}</div>
+      <a class="section-link" routerLink="/restaurants">{{ translatePrefix + 'food.cta' | translate }}</a>
     </div>
   </div>
 </div>
