refactor(events.component): Refactor events module structure and enhance localization
Removed several Angular modules related to the public-facing portion of the application to simplify routing. Imported those modules directly into related component instead for easy readability. Additionally, month labels in Italian language were moved to the translation file (it.json) for better management of internationalization and localization.

#wip

--- a/src/app/pages/public/events/events.component.less
+++ b/src/app/pages/public/events/events.component.less
@@ -74,6 +74,7 @@
 
   .container {
     background: url('../../../../assets/images/events_vertical_new.jpg') no-repeat center center fixed;
+    background-size: cover;
   }
 
   .container .weekday .date {
