feat(events.component): Refactor application models and update events list
This codebase refactor removes numerous application models and updates other models and styles significantly. The event list has been rewritten and now receives data from a json file. The `ScheduledEventService` has been adjusted accordingly. The format and style of the Events page on the website has also been significantly reworked.

Signed-off-by: riccardocampani96 <riccardocampani96@gmail.com>

#wip: missing mobile styles

--- a/src/app/pages/public/events/events.component.html
+++ b/src/app/pages/public/events/events.component.html
@@ -3,8 +3,7 @@
   @for (day of schedule; track day.date) {
     <div class="weekday">
       <div class="date">
-        {{ day.date }}
-        {{ monthLabel[day.month].short }}
+        {{ day.date }}/{{ monthLabel[day.month].short }}
       </div>
       <div class="content">
         @for (event of day.events; track event._id) {
