--- a/src/app/pages/public/home/home.component.less
+++ b/src/app/pages/public/home/home.component.less
@@ -108,8 +108,8 @@
 
   .column {
     width: 50%;
-    background: #000000bb;
     color: #ffffff;
+    backdrop-filter: brightness(0.25);
 
     .info {
       position: relative;
