--- a/src/app/pages/public/events/events.component.less
+++ b/src/app/pages/public/events/events.component.less
@@ -1,91 +1,96 @@
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700");
-
 .container {
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-wrap: wrap;
   color: #ffffff;
-  background: url('../../../../assets/images/events_horizontal.jpg') no-repeat center center fixed;
+  background: url('../../../../assets/images/events.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
-.container > * {
-  width: 100%;
-}
+.container {
+  & > * {
+    width: 100%;
+  }
 
-.container h1 {
-  margin: 10vh 20vw 0 20vw;
-  font-family: 'BERNIER', sans-serif;
-  font-size: 48pt;
-}
+  h1 {
+    width: 100%;
+    margin: 0 0 10vh 0;
+    padding: 5vh 20vw;
+    font-family: 'BERNIER', sans-serif;
+    font-size: 48pt;
+    backdrop-filter: brightness(0.25);
+  }
 
-.container .weekday {
-  display: flex;
-  flex-wrap: wrap;
-  min-height: 60vh;
-  color: #ffffff;
-  box-shadow: inset 0 0 0 1000px #000000bb;
-  margin: 15vh 0;
-}
+  .weekday {
+    display: flex;
+    flex-wrap: wrap;
+    min-height: 45vh;
+    color: #ffffff;
+    backdrop-filter: brightness(0.25);
+    margin: 10vh 0;
 
-.container .weekday .date {
-  font-family: Carneys, serif;
-  font-size: 10rem;
-  font-weight: 700;
-  color: #ffffff66;
-  margin: 0 20vw;
-}
+    .date {
+      font-family: Carneys, serif;
+      font-size: 56pt;
+      color: #ffffff66;
+      margin: 0 20vw;
+    }
 
-.container .weekday .content {
-  width: 100%;
-  padding: 0 20vw;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  align-items: center;
-}
+    .content {
+      width: 100%;
+      padding: 0 20vw 3rem 20vw;
+      display: grid;
+      grid-template-columns: auto auto auto;
+      align-items: center;
+      gap: 2rem;
 
-.container .weekday .event {
-  border-left: 5px solid #f9d639;
-  padding-left: 1rem;
-}
+      .event {
+        border-left: 5px solid var(--primary-color);
+        padding-left: 1rem;
+        min-height: 60px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
-.container .weekday .event>* {
-  margin: 0;
-}
+        & > * {
+          margin: 0;
+        }
 
-.container .weekday .event p {
-  font-weight: 400;
-}
+        p {
+          font-weight: 400;
+        }
 
-.container .weekday .event h3 {
-  font-weight: 500;
-  font-size: 1rem;
-}
+        h3 {
+          font-weight: 500;
+          font-size: 1rem;
+        }
 
-.container .weekday .event h4 {
-  font-weight: 400;
-  color: #ffffff66;
+        h4 {
+          font-weight: 400;
+          color: #ffffff66;
+        }
+      }
+    }
+  }
 }
 
 /* MOBILE DEVICES */
 
-@media screen and (max-width:999px) {
+@media screen and (max-width: 999px) {
 
   .container {
-    background: url('../../../../assets/images/events_vertical_new.jpg') no-repeat center center fixed;
-    background-size: cover;
-  }
+    .weekday {
+      .date {
+        font-size: 7rem;
+      }
 
-  .container .weekday .date {
-    font-size: 7rem;
-  }
+      .content {
+        grid-template-columns: auto;
+      }
 
-  .container .weekday .content {
-    grid-template-columns: auto;
-  }
-
-  .container .weekday .event {
-    margin: 2rem 0;
+      .event {
+        margin: 2rem 0;
+      }
+    }
   }
 }
