--- a/src/app/pages/public/events/events.component.less
+++ b/src/app/pages/public/events/events.component.less
@@ -33,7 +33,7 @@
       font-family: Carneys, serif;
       font-size: 56pt;
       color: #ffffff66;
-      margin: 0 20vw;
+      margin: 3rem 20vw 0 20vw;
     }
 
     .content {
