feat(restaurant): Add restaurants component and adjust styling
A new route and component for restaurants have been added to the application. The shared module was removed, and relevant imports were added directly to the app module. Additionally, some adjustments were made to the styling of the events component.

Signed-off-by: riccardocampani96 <riccardocampani96@gmail.com>

--- a/src/app/pages/public/events/events.component.less
+++ b/src/app/pages/public/events/events.component.less
@@ -14,7 +14,7 @@
 
   h1 {
     width: 100%;
-    margin: 0 0 5vh 0;
+    margin: 0;
     padding: 5vh 20vw;
     font-family: 'BERNIER', sans-serif;
     font-size: 48pt;
@@ -27,7 +27,7 @@
     min-height: 45vh;
     color: #ffffff;
     backdrop-filter: brightness(0.25);
-    margin: 5vh 0;
+    padding: 5vh 0;
 
     .date {
       font-family: Carneys, serif;
