feat(global menu): Replace SlideMenu with Sidebar in nav component
In the nav component, the SlideMenu module was replaced with Sidebar and Menu modules to manage the visibility of the navigation menu. This change will provide a more clear and functional navigation menu for the application. Corresponding visual adjustments for proper layering were made in the CSS files.

Signed-off-by: riccardocampani96 <riccardocampani96@gmail.com>

#wip #missingStyles

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,12 @@
-<button type="button" (click)="menu.toggle($event)">
+<button type="button" (click)="isMenuSidebarVisible = true">
   <img ngSrc="../../../assets/images/menu_blob.svg" alt="Menu button" height="900" width="900">
   <i class="pi pi-bars"></i>
 </button>
-<p-slideMenu #menu [model]="menuItems" [popup]="true" [viewportHeight]="250" [style]="{'min-width':'175px'}">
-</p-slideMenu>
+
+<p-sidebar [(visible)]="isMenuSidebarVisible">
+  <p-menu [model]="menuItems"></p-menu>
+</p-sidebar>
+
+<!--FIXME old version-->
+<!--<p-slideMenu #menu [model]="menuItems" [popup]="true" [viewportHeight]="250" [style]="{'min-width':'175px'}">-->
+<!--</p-slideMenu>-->
