--- a/src/assets/themes/smdn-theme.css
+++ b/src/assets/themes/smdn-theme.css
@@ -79,7 +79,8 @@
 
 .p-component-overlay {
   background-color: rgba(0, 0, 0, .32);
-  transition-duration: .2s
+  transition-duration: .2s;
+  z-index: 999 !important;
 }
 
 .p-disabled, .p-component:disabled {
