--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -2,12 +2,14 @@
   nav[smdn-nav] {
     position: relative;
     z-index: 1000;
-    .p-slidemenu {
-      .p-slidemenu-wrapper {
-        width: 100% !important;
 
-        ul {
-          width: 100% !important;
+    .p-sidebar {
+      .p-sidebar-content {
+        padding: 0;
+
+        .p-menu {
+          border: 0;
+          width: 100%;
         }
       }
     }
