--- a/src/app/pages/public/events/events.component.less
+++ b/src/app/pages/public/events/events.component.less
@@ -79,6 +79,10 @@
 
 @media screen and (max-width: 1023px) {
   .container {
+    h1 {
+      padding-bottom: 0;
+    }
+
     .weekday {
       .date {
         font-size: 48pt;
@@ -99,6 +103,11 @@
 
 @media screen and (max-width: 425px) {
   .container {
+    h1 {
+      font-size: 32pt;
+      padding-top: 5rem;
+    }
+
     .weekday {
       .date {
         font-size: 32pt;
