--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -4,5 +4,11 @@
 </button>
 
 <p-sidebar [(visible)]="isMenuSidebarVisible">
-  <p-menu [model]="menuItems"></p-menu>
+  <p-menu [model]="navItems">
+    <ng-template pTemplate="item" let-item>
+      <a class="p-menuitem-link flex justify-content-between align-items-center p-3" [routerLink]="item.routerLink" (click)="navItemClick()">
+        {{ item.label }}
+      </a>
+    </ng-template>
+  </p-menu>
 </p-sidebar>
